--- a/css/main.css
+++ b/css/main.css
@@ -23,4 +23,21 @@ body {
     padding-bottom: 10px;
     color: grey;
 }
-
+span {
+    display: block;
+    cursor: pointer;
+    background: #96e3f5;
+    color: #fff;
+    font-size: 40px;
+}
+ul li {
+    list-style: none;
+    float: left;
+    display: block;
+    color: #fff;
+    text-transform: uppercase;
+    padding: 16px 13px;
+    margin-left: 0px;
+    background: tomato;
+    cursor: pointer;
+}
